--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,10 +1,71 @@
-.container {
-    display: flex;
+// @import "../node_modules/bootstrap/scss/bootstrap";
+
+.container-fluid {
+    padding: 0;
     width: 100%;
+
+    & figure {
+        margin: 60px 60px 60px 0px;
+        justify-content: flex-end;
+        object-position: right;
+        display: flex;
+    }
 }
+
 .airplane {
-    position: relative;
+    position: absolute;
+    width: 70%;
+    height: 100%;
     border-radius: 20px;
-    width: 90%;
-    margin: 30px 0px 30px 100px;
+    object-fit: cover;
+    object-position: left center;
+    z-index: -1;
+}
+
+.container-mine {
+    width: 37%;
+    margin-left: 60px;
+    border-radius: 20px;
+    z-index: 1;
+}
+
+form {
+    background-color: rgb(230, 225, 255);
+    border-radius: 20px;
+}
+
+.btn {
+    background-color: rgb(171, 81, 255);
+    color: white;
+    border-radius: 20px;
+}
+@media screen and (max-width: 800px) {
+    .container-mine {
+        width: 50%;
+    }
+
+}
+
+@media screen and (max-width: 500px) {
+    .container-fluid {
+        & figure {
+            margin: 0;
+        }
+    }
+
+    .airplane {
+        width: 100%;
+        height: 300px;
+        border-radius: 0;
+    }
+
+    .container-mine {
+        width: 90%;
+        margin: 0 auto;
+        margin-top: 5%;
+    }
+    form {
+        display: flex;
+        flex-direction: column;
+    }
 }
