--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -32,13 +32,31 @@
 form {
     background-color: rgb(230, 225, 255);
     border-radius: 20px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 2px 20px rgba(0, 0, 0, 0.12);
+
 }
 
 .btn {
+    &-submit{
     background-color: rgb(171, 81, 255);
     color: white;
     border-radius: 20px;
+    }
+    &-trip {
+        background-color: white;
+        // border-radius: 0;
+    }
 }
+.activado input[type=radio]:checked + label {
+    background-color: rgb(171, 81, 255);
+    color: white;
+    border: none;
+}
+.activado {
+    background-color: white;
+    padding: 5px 8px;
+}
+
 @media screen and (max-width: 800px) {
     .container-mine {
         width: 50%;
@@ -64,7 +82,11 @@ form {
         margin: 0 auto;
         margin-top: 5%;
     }
-    form {
+    // form {
+    //     display: flex;
+    //     flex-direction: column;
+    // }
+    .column {
         display: flex;
         flex-direction: column;
     }
