--- a/src/components/flights/flight.scss
+++ b/src/components/flights/flight.scss
@@ -2,7 +2,7 @@
     background-color:rgb(242, 251, 255);
     padding: 40px 40px 40px;
     margin: 0;
-    height: 100%;
+    height: 100vh;
 }
 .btn {
     &-change{
