--- a/src/components/seats/seats.scss
+++ b/src/components/seats/seats.scss
@@ -1,15 +1,4 @@
-.div{display: flex;
-    gap: 50px
-    ;
-    &jet{
-        gap: 5px
-        ;
-        display: flex;
-        flex-direction: column;
-        button{
-            width: 200px;
-            height: 100px;
-        }
-    }
+.btn-seat:visited {
+    background-color: rgb(171, 81, 255);
 
 }
